crates/valib-preset-manager/tests/snapshots/presets__Bad Revision.snap
---
source: crates/valib-preset-manager/tests/presets.rs
expression: preset
---
RevisionMismatch {
    expected: 0,
    found: 2,
}
