crates/valib-preset-manager/tests/snapshots/presets__Default.snap
---
source: crates/valib-preset-manager/tests/presets.rs
expression: preset
---
PresetV1 {
    version: PresetV1Version,
    data_revision: 0,
    metadata: PresetMeta {
        title: "Default",
        author: "valib",
        tags: {
            "default",
            "init",
        },
        revision: 1,
        other: {},
    },
    data: Table(
        {},
    ),
}
