crates/valib-preset-manager/tests/snapshots/presets__Invalid Version.snap
---
source: crates/valib-preset-manager/tests/presets.rs
expression: preset
---
TomlError(
    Error {
        inner: Error {
            inner: TomlError {
                message: "Presets from PresetV1 can only have version = 1 (not 2)",
                raw: Some(
                    "version = 2\ndata_revision = 0\n\n[metadata]\ntitle = \"Invalid Version\"\nauthor = \"valib\"\nrevision = 1\ntags = [\"default\",\"init\"]\n\n[data]",
                ),
                keys: [
                    "version",
                ],
                span: Some(
                    10..11,
                ),
            },
        },
    },
)
